tdf#117038 set button width to max possible content width

Change-Id: I97e7c27523d213cb06cdf87a8ed0124d1ea8d5ba